--- a/communications.html
+++ b/communications.html
@@ -21,8 +21,8 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
-                        <li class="nav__item"><a href="communications.html" class="nav__link">Communications</a></li>
+                        <li class="nav__item"><a href="" class="nav__link active-link">Home</a></li>
+                        <li class="nav__item"><a href="#home" class="nav__link">Communications</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
@@ -39,9 +39,9 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Technology and<br>the Skilled Trades<br><span class="home__title-color">Portfolio</span></h1>
+                    <h1 class="home__title"><span class="home__title-color">Communications</span><br>Technology</h1>
 
-                    <a href="#about" class="button">View More</a>
+                    <a href="#contact" class="button">Contact</a>
                 </div>
 
                 <div class="home__social">
@@ -57,7 +57,7 @@
                         </mask>
                         <g mask="url(#mask0)">
                             <path d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z"/>
-                            <image class="home__blob-img" x="-100" y="0" href="static/img/classroom.jpg"/>
+                            <image class="home__blob-img" x="50" y="60" href="static/img/work1.jpg"/>
                         </g>
                     </svg>
                 </div>
@@ -65,26 +65,17 @@
 
             <!--===== ABOUT =====-->
             <section class="about section " id="about">
-                <h2 class="section-title">About Technological Studies</h2>
+                <h2 class="section-title">About</h2>
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="static/img/work5.jpg" alt="">
+                        <img src="static/img/about.jpg" alt="">
                     </div>
                     
                     <div>
-                        <h2 class="about__subtitle">What is the Technological Studies department?</h2>
-                        <p class="about__text">Technological Studies is a department at Bill Hogarth Secondary School (BHSS) that offers comprehensive and diverse courses related to technology. It offers a dynamic and hands-on exploration of how technology shapes our world. Throughout the semester, we engaged with a variety of sub-units that develop both practical and critical thinking skills.</p>
-                    </div>
-                    
-                    <div>
-                        <h2 class="about__subtitle">Units offered</h2>
-                        <p class="about__text">This semester, there were six key units: Communications Technology, Technology Design, Healthcare Technology, Construction Technology, Transportation Technology, and Computer Technology. For the Communications unit, I worked on a Spot the Differences puzzle on Photoshop. Next, we built a Bridge out of popsicle sticks during the Construction unit. After that, we moved on to Healthcare where we did a presentation on the human body. Continuing with presentations, we did a presentation on one part of the MTO’s driver handbook for Transportation. Afterwards, we made a contraption for dropping eggs from the roof for Technological Design. Finally, we made a Cyborg Mask and then we went through a maze with a partner controlling us for the Computer Technology unit. Use the navigation buttons above to explore my journey and see the projects and assignments I completed in each unit.</p>
-                    </div>
-
-                    <div class="about__img">
-                        <img src="static/img/work6.jpg" alt="">
-                    </div>
+                        <h2 class="about__subtitle">I'am Marlon</h2>
+                        <p class="about__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate cum expedita quo culpa tempora, assumenda, quis fugiat ut voluptates soluta, aut earum nemo recusandae cumque perferendis! Recusandae alias accusamus atque.</p>           
+                    </div>                                   
                 </div>
             </section>
 
@@ -195,8 +186,8 @@
 
         <!--===== FOOTER =====-->
         <footer class="footer">
-            <p class="footer__title">Technology and the Skilled Trades Portfolio</p>
-            <p class="footer__copy">&#169; 2025 Exemplary Studios. All rights reserved.</p>
+            <p class="footer__title">Portfolio Numérique de Benny</p>
+            <p class="footer__copy">&#169; 2025. All rigths reserved.</p>
         </footer>
 
 
