--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="static/css/styles.css">
 
         <!-- =====BOX ICONS===== -->
-        <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+        <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
 
         <title>Technology and the Skilled Trades</title>
     </head>
@@ -23,9 +23,11 @@
                     <ul class="nav__list">
                         <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
                         <li class="nav__item"><a href="communications.html" class="nav__link">Communications</a></li>
-                        <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-                        <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
-                        <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+                        <li class="nav__item"><a href="construction.html" class="nav__link">Construction</a></li>
+                        <li class="nav__item"><a href="healthcare.html" class="nav__link">Healthcare</a></li>
+                        <li class="nav__item"><a href="transportation.html" class="nav__link">Transportation</a></li>
+                        <li class="nav__item"><a href="design.html" class="nav__link">Design</a></li>
+                        <li class="nav__item"><a href="computer.html" class="nav__link">Computer</a></li>
                     </ul>
                 </div>
 
@@ -45,9 +47,12 @@
                 </div>
 
                 <div class="home__social">
-                    <a href="" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="" class="home__social-icon"><i class='bx bxl-behance'></i></a>
-                    <a href="" class="home__social-icon"><i class='bx bxl-github'></i></a>
+                    <a href="/communications.html" class="home__social-icon" title="Communications Technology"><i class='bx bx-megaphone'></i></a>
+                    <a href="/construction.html" class="home__social-icon" title="Construction Technology"><i class='bx bx-traffic-cone'></i></a>
+                    <a href="/healthcare.html" class="home__social-icon" title="Healthcare Technology"><i class='bx bx-hospital'></i></a>
+                    <a href="/transportation.html" class="home__social-icon" title="Transportation Technology"><i class='bx bx-car'></i></a>
+                    <a href="/design.html" class="home__social-icon" title="Technology Design"><i class='bx bx-angle'></i></a>
+                    <a href="/computer.html" class="home__social-icon" title="Computer Technology"><i class='bx bx-code'></i></a>
                 </div>
 
                 <div class="home__img">
@@ -64,7 +69,7 @@
             </section>
 
             <!--===== ABOUT =====-->
-            <section class="about section " id="about">
+            <section class="about section" id="about">
                 <h2 class="section-title">About Technological Studies</h2>
 
                 <div class="about__container bd-grid">
@@ -79,7 +84,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">Units offered</h2>
-                        <p class="about__text">This semester, there were six key units: <b>Communications Technology</b>, <b>Technology Design</b>, <b>Healthcare Technology</b>, <b>Construction Technology</b>, <b>Construction Technology</b>, and <b>Construction Technology</b>. For the Communications unit, I worked on a Spot the Differences puzzle on Photoshop. Next, we built a Bridge out of popsicle sticks during the Construction unit. After that, we moved on to Healthcare where we did a presentation on the human body. Continuing with presentations, we did a presentation on one part of the MTO’s driver handbook for Transportation. Afterwards, we made a contraption for dropping eggs from the roof for Technological Design. Finally, we made a Cyborg Mask and then we went through a maze with a partner controlling us for the Computer Technology unit. Use the navigation buttons above to explore my journey and see the projects and assignments I completed in each unit.</p>
+                        <p class="about__text">This semester, there were six key units: <b>Communications Technology</b>, <b>Technology Design</b>, <b>Healthcare Technology</b>, <b>Construction Technology</b>, <b>Transportation Technology</b>, and <b>Computer Technology</b>. For the Communications unit, I worked on a Spot the Differences puzzle on Photoshop. Next, we built a Bridge out of popsicle sticks during the Construction unit. After that, we moved on to Healthcare where we did a presentation on the human body. Continuing with presentations, we did a presentation on one part of the MTO’s driver handbook for Transportation. Afterwards, we made a contraption for dropping eggs from the roof for Technological Design. Finally, we made a Cyborg Mask and then we went through a maze with a partner controlling us for the Computer Technology unit. Use the navigation buttons above to explore my journey and see the projects and assignments I completed in each unit.</p>
                     </div>
 
                     <div class="about__img">
@@ -89,7 +94,7 @@
             </section>
 
             <!--===== SKILLS =====-->
-            <section class="skills section" id="skills">
+            <!-- <section class="skills section" id="skills">
                 <h2 class="section-title">Skills</h2>
 
                 <div class="skills__container bd-grid">          
@@ -150,10 +155,10 @@
                         <img src="static/img/work3.jpg" alt="" class="skills__img">
                     </div>
                 </div>
-            </section>
+            </section> -->
 
             <!--===== WORK =====-->
-            <section class="work section" id="work">
+            <!-- <section class="work section" id="work">
                 <h2 class="section-title">Work</h2>
 
                 <div class="work__container bd-grid">
@@ -176,7 +181,7 @@
                         <img src="static/img/work6.jpg" alt="">
                     </a>
                 </div>
-            </section>
+            </section> -->
 
             <!--===== CONTACT =====-->
             <!-- <section class="contact section" id="contact">
