--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
         <link rel="stylesheet" href="static/css/styles.css">
 
+        <link rel="icon" href="static/img/work1.jpg">
+
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
 
@@ -16,7 +18,7 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">Benny Ye</a>
+                    <a href="/" class="nav__logo"><img src="static/img/grandswager-pfp.png" class="nav__logo-img"/>Benny Ye</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
