Fix for communications

--- a/communications.html
+++ b/communications.html
@@ -81,7 +81,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">Communications Technology</h2>
-                        <p class="about__text">Placeholder text</p>
+                        <p class="about__text">Placeholder text.</p>
                     </div>
                 </div>
             </section>
