--- a/communications.html
+++ b/communications.html
@@ -80,8 +80,8 @@
                     </div> -->
                     
                     <div>
-                        <h2 class="about__subtitle">Communications Technology</h2>
-                        <p class="about__text">Placeholder text.</p>
+                        <center><h2 class="about__subtitle">Communications Technology</h2></center>
+                        <p class="about__text">Communications technology courses offer students hands-on experience in areas such as digital media, broadcasting, graphic design, and telecommunications. These courses provides learners with skills in audio-visual production, video editing, web design, and network systems. These courses ensures that students are well-prepared for careers in media, information technology, and communication industries. </p>
                     </div>
                 </div>
             </section>
