Communications - Projects Spot the Differences

--- a/communications.html
+++ b/communications.html
@@ -86,14 +86,14 @@
                 </div>
             </section>
 
-            <!--===== ABOUT =====-->
+            <!--===== PROJECTS =====-->
             <section class="about section" id="projects">
                 <h2 class="section-title">Projects</h2>
 
                 <div class="about__container bd-grid">
                     <div>
                         <h2 class="about__subtitle">Spot the Differences</h2>
-                        <p class="about__text">Placeholder text</p>
+                        <p class="about__text">During this Communications Technology unit in this course, I completed an assignment focused on photoshopping skills, where I created a Spot the Differences puzzle using Adobe Photoshop. This project required me to take original images and digitally alter them to include subtle changes, such as removing or shifting objects, adjusting colours, or resizing elements, to create a second version with hidden differences. Through this assignment, I developed technical skills such as using layers, selection tools, and image editing techniques in Photoshop, as well as soft skills like attention to detail, and creativity. I found the experience fun and engaging because it challenged me to think critically and pay close attention to visual elements.</p>
                     </div>
 
                     <div class="about__img">
