Communications Background test

--- a/communications.html
+++ b/communications.html
@@ -41,7 +41,7 @@
 
         <main class="l-main">
             <!--===== HOME =====-->
-            <section class="home bd-grid" id="home">
+            <section class="home bd-grid communications-home" id="home">
                 <div class="home__data">
                     <h1 class="home__title"><span class="home__title-color">Communications</span><br>Technology</h1>
 
