--- a/communications.html
+++ b/communications.html
@@ -41,7 +41,7 @@
 
         <main class="l-main">
             <!--===== HOME =====-->
-            <section class="home bd-grid communications-home" id="home">
+            <section class="home bd-grid" id="home">
                 <div class="home__data">
                     <h1 class="home__title"><span class="home__title-color">Communications</span><br>Technology</h1>
 
@@ -67,6 +67,13 @@
                             <image class="home__blob-img" x="-100" y="0" href="static/img/broadcasting.jpg"/>
                         </g>
                     </svg>
+                </div>
+
+                <div class="home__decor">
+                    <div class="decor-icon" style="top: 13%; left: 5%; transform: rotate(-30deg);"><i class="bx bx-microphone-alt-2"></i></div>
+                    <div class="decor-icon" style="top: 25%; left: 60%; transform: rotate(20deg);"><i class="bx bx-tv"></i></div>
+                    <div class="decor-icon" style="top: 57%; left: -3%; transform: rotate(-45deg);"><i class="bx bx-broadcast"></i></div>
+                    <div class="decor-icon" style="top: 85%; left: 50%; transform: rotate(-15deg);"><i class="bx bx-headphone-mic"></i></div>
                 </div>
             </section>
 
