--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
                         </g>
                     </svg>
                 </div>
+
+                <div class="home__decor">
+                    <div class="decor-icon" style="top: 13%; left: 5%; transform: rotate(-30deg);"><i class="bx bx-megaphone"></i></div>
+                    <div class="decor-icon" style="top: 25%; left: 60%; transform: rotate(20deg);"><i class="bx bx-traffic-cone"></i></div>
+                    <div class="decor-icon" style="top: 59%; left: -3%; transform: rotate(-45deg);"><i class="bx bx-hospital"></i></div>
+                    <div class="decor-icon" style="top: 85%; left: 50%; transform: rotate(-15deg);"><i class="bx bx-car"></i></div>
+                    <div class="decor-icon" style="top: 55%; left: 30%; transform: rotate(5deg);"><i class="bx bx-angle"></i></div>
+                    <div class="decor-icon" style="top: 70%; left: 98%; transform: rotate(-5deg);"><i class="bx bx-code"></i></div>                    
+                </div>
             </section>
 
             <!--===== ABOUT =====-->
