--- a/communications.html
+++ b/communications.html
@@ -104,7 +104,7 @@
                     </div>
 
                     <div class="about__img">
-                        <img src="static/img/BennyYe_SPOT_Final copy.jpg" alt="">
+                        <img src="static/img/BennyYe_SPOT_Final copy.png" alt="">
                     </div>
                 </div>
             </section>
