Update construction.html for Write-up

--- a/construction.html
+++ b/construction.html
@@ -88,7 +88,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">Construction Technology</h2>
-                        <p class="about__text">Placeholder Text because i don't know what to put here yet</p>
+                        <p class="about__text">Construction Technology courses give students the opportunity to explore the world of building and skilled trades through hands-on learning. These courses teach practical skills like working with power tools, reading blueprints, and understanding basic construction methods. Students also learn about safety, teamwork, and problem-solving, which are important in both the workplace and everyday life. Construction Technology can lead to future careers in areas such as carpentry, electrical work, plumbing, and other trades, and may help students prepare for apprenticeship programs or further education in the field.</p>
                     </div>
                 </div>
             </section>
@@ -100,7 +100,7 @@
                 <div class="about__container bd-grid">
                     <div>
                         <h2 class="about__subtitle">Bridge Construction</h2>
-                        <p class="about__text">What did i do??</p>
+                        <p class="about__text">During this unit, I did a bridge-building project where our team was tasked with designing and constructing a bridge using up to 100 popsicle sticks and hot glue. We began by researching different types of bridges—beam, truss, and arch—to understand how they support weight and withstand forces like tension and compression. After sketching multiple design ideas and planning our design, we constructed a truss-style bridge. Throughout the process, we adapted our design to improve stability and ensure it met the testing requirements, including a gap for weight application. The project helped me develop skills in teamwork, planning, problem-solving, and hands-on construction. It also gave me insight into careers in civil engineering and construction.</p>
                     </div>
 
                     <div class="about__img">
