--- a/construction.html
+++ b/construction.html
@@ -109,12 +109,12 @@
                     </div>
                     
                     <div class="about__img">
-                        <img src="static/img/Bridge.jpg" alt=""><br>
+                        <img src="static/img/IMG_4219.jpeg" alt=""><br>
                         <center><p>Truss Bridge</p></center>
                     </div>
                     
                     <div class="about__img">
-                        <img src="static/img/Bridge.jpg" alt=""><br>
+                        <img src="static/img/IMG_4218.jpeg" alt=""><br>
                         <center><p>Arch Bridge</p></center>
                     </div>
                 </div>
