Update Transportation for skills icons

--- a/transportation.html
+++ b/transportation.html
@@ -104,7 +104,7 @@
                         <p class="skills__text" style="text-align:center;">Here are some skills that you learn from transportation technology:</p>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bx-spanner skills__icon'></i>
+                                <i class='fa-solid fa-wrench skills__icon'></i>
                                 <span class="skills__name">Changing oil</span>
                             </div>
                             <div class="skills__bar skills__html">
@@ -116,7 +116,7 @@
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bx-clipboard-check skills__icon'></i>
+                                <i class='fa-solid fa-list-check skills__icon'></i>
                                 <span class="skills__name">Checking breaks</span>
                             </div>
                             <div class="skills__bar skills__css">
@@ -128,7 +128,7 @@
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bx-scan-detail skills__icon' ></i>
+                                <i class='fa-solid fa-magnifying-glass skills__icon' ></i>
                                 <span class="skills__name">Performing inspections</span>
                             </div>
                             <div class="skills__bar skills__js">
@@ -188,5 +188,7 @@
 
         <!--===== MAIN JS =====-->
         <script src="static/js/main.js"></script>
+
+        <script src="https://kit.fontawesome.com/e60f0fe32a.js" crossorigin="anonymous"></script>
     </body>
 </html>
