Update Transportation for id Tag

--- a/transportation.html
+++ b/transportation.html
@@ -158,7 +158,7 @@
                 </div>
             </section>
 
-            <section class="work section" id="work">
+            <section class="work section" id="gallery">
                 <h2 class="section-title">Gallery</h2>
                 <p style="text-align: center;">Click on the image to zoom in.</p>
 
