Update Healthcare Text-centre

--- a/healthcare.html
+++ b/healthcare.html
@@ -107,14 +107,14 @@
                         <img src="static/img/ExcretorySystem.png" alt="">
                     </div>
 
-                    <div class="about__img">
+                    <div class="about__img" style="text-align: center;">
                         <img src="static/img/ExcretorySystemParts.png" alt=""><br>
-                        <center><p>Some organs of the Excretory System</p></center>
+                        <p>Some organs of the Excretory System</p>
                     </div>
                     
-                    <div class="about__img">
+                    <div class="about__img" style="text-align: center;">
                         <img src="static/img/ExcretorySystemSymptoms.png" alt=""><br>
-                        <center><p>Common symptoms of diseases</p></center>
+                        <p>Common symptoms of diseases</p>
                     </div>
                 </div>
             </section>
