Update Design and fix

--- a/design.html
+++ b/design.html
@@ -115,7 +115,7 @@
 
                     <div>
                         <h2 class="about__subtitle">Homestyler</h2>
-                        <p class="about__text">Another assignment that we did during this unit was the Tiny House Design assignment using Homestyler to create a detailed floor plan and interior layout for a 20' x 26' open-concept tiny house. I began by drawing a floor plan sketch on graph paper, ensuring all walls, windows, doors, and room dimensions were accurately represented. Using Homestyler, I then built this sketch into a digital model. We also had to place furniture, fixtures, and appliances to maximize functionality and aesthetic appeal within the small space. I carefully selected a cohesive colour palette and materials to create visual harmony throughout the design. The project challenged me to balance practical considerations like room flow and accessibility with creative choices, ultimately resulting in a tiny house design I was proud of. This assignment helped me better understand space planning, architectural principles, and interior design.</p>
+                        <p class="about__text">Another assignment that we did during this unit was the Tiny House Design assignment using Homestyler to create a detailed floor plan and interior layout for a 20' x 26' open-concept tiny house. I began by drawing a floor plan sketch on graph paper, ensuring all walls, windows, doors, and room dimensions were accurately represented. Using Homestyler, I then built this sketch into a digital model. We also had to place furniture, fixtures, and appliances to maximize functionality and aesthetic appeal within the small space. I carefully selected a cohesive colour palette and materials to create visual harmony throughout the design. This assignment helped me better understand space planning, architectural principles, and interior design.</p>
                     </div>
                 </div>
             </section>
@@ -126,16 +126,13 @@
 
                 <div class="work__container bd-grid">
                     <a href="static/img/Bathroom.jpeg" class="work__img">
-                        <img src="static/img/Bathroom.jpeg" alt=""><br>
-                        <p>Bathroom</p>
+                        <img src="static/img/Bathroom.jpeg" alt="">
                     </a>
                     <a href="static/img/KitchenDining.jpeg" class="work__img">
-                        <img src="static/img/KitchenDining.jpeg" alt=""><br>
-                        <p>Kitchen and Dining Room</p>
+                        <img src="static/img/KitchenDining.jpeg" alt="">
                     </a>
                     <a href="static/img/BedroomSquare.jpg" class="work__img">
-                        <img src="static/img/Bedroom.jpeg" alt=""><br>
-                        <p>Bedroom</p>
+                        <img src="static/img/Bedroom.jpeg" alt="">
                     </a>
                     <a href="static/img/LivingRoom.jpeg" class="work__img">
                         <img src="static/img/LivingRoom.jpeg" alt="">
