Update Design Technology for icons

--- a/design.html
+++ b/design.html
@@ -71,9 +71,9 @@
 
                 <div class="home__decor">
                     <div class="decor-icon" style="top: 13%; left: 5%; transform: rotate(-30deg);"><i class="bx bx-angle"></i></div>
-                    <div class="decor-icon" style="top: 25%; left: 60%; transform: rotate(20deg);"><i class="bx bx-tram"></i></div>
-                    <div class="decor-icon" style="top: 57%; left: -3%; transform: rotate(-45deg);"><i class="bx bx-ship"></i></div>
-                    <div class="decor-icon" style="top: 85%; left: 50%; transform: rotate(-15deg);"><i class="bx bx-plane-take-off"></i></div>
+                    <div class="decor-icon" style="top: 25%; left: 60%; transform: rotate(20deg);"><i class="bx bx-pencil"></i></div>
+                    <div class="decor-icon" style="top: 57%; left: -3%; transform: rotate(-45deg);"><i class="bx bx-newspaper"></i></div>
+                    <div class="decor-icon" style="top: 85%; left: 50%; transform: rotate(-15deg);"><i class="bx bx-ease-in-out"></i></div>
                 </div>
             </section>
 
