--- a/computer.html
+++ b/computer.html
@@ -100,7 +100,7 @@
                 <div class="about__container bd-grid">
                     <div>
                         <h2 class="about__subtitle">Cyborg Mask</h2>
-                        <p class="about__text">During this unit, I worked with a partner for the Cyborg Mask assignment, where we designed and built a functional cyborg mask and control system. The goal was to guide a blindfolded "cyborg" through a classroom maze using only LED signals controlled by switches on a handheld board. We researched electrical circuits, experimented with LED placement and signaling methods, and constructed both the mask and controller using cardboard, wires, resistors, and a 9V battery. We tested and refined our design to ensure reliable communication through light signals alone. The project challenged us to apply skills in electronics, design, teamwork, and problem-solving.</p>
+                        <p class="about__text">During this unit, I worked with a partner for the Cyborg Mask assignment, where we designed and built a functional cyborg mask and control system. The goal was to guide a blind "cyborg" through a classroom maze using only LED signals controlled by switches on a handheld board. We researched electrical circuits, experimented with LED placement and signaling methods, and constructed both the mask and controller using cardboard, wires, resistors, and a 9V battery. We tested and refined our design to ensure reliable communication through light signals alone. The project challenged us to apply skills in electronics, design, teamwork, and problem-solving.</p>
                     </div>
 
                     <div class="about__img" style="text-align: center;">
