--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
 
+        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
         <title>Technology and the Skilled Trades</title>
     </head>
     <body>
@@ -101,6 +103,16 @@
                     <div class="about__img">
                         <img src="static/img/work6.jpg" alt="">
                     </div>
+                </div>
+
+                <br><br>
+
+                <div class="bd-center">
+                    <form action="?" method="POST">
+                        <div class="g-recaptcha" data-sitekey="6LekRR0sAAAAAGGG41NVPYL49Ork_Ym7QAEOKjgr"></div>
+                        <br/>
+                        <input type="submit" value="Submit">
+                    </form>
                 </div>
             </section>
 
